basic-parallel-filechunk/spring-commandline/src/test/resources/copybooks/good/simple-fixed.cbl
01  SAMPLERECORD.
05  RECTYPE           PIC X(1).
05  ACCOUNTNUMBER     PIC 9(5).
05  CUSTOMERNAME      PIC X(20).
