basic-parallel-filechunk/spring-commandline/src/test/resources/copybooks/bad/bad-88-placement.cbl
01  BROKEN-REC.
05  FIELD1 PIC X.
05  FIELD2 PIC 9.
88  INVALID-88 VALUE 1.
